--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,69 @@
 {
-    "name": "nhockizi/yii2-cms",
-    "version": "dev-master",
-    "description": "CMS based on Yii2 Framework - Development package",
-    "keywords": ["nhockizi"],
-    "homepage": "https://github.com/nhockizi/yii2-cms",
-    "type": "yii2-extension",
+    "name": "nhockizi/yii2-shop",
+    "description": "",
+    "keywords": ["yii2", "cms", "control panel", "admin", "nhockizi", "shop"],
+    "homepage": "https://github.com/nhockizi",
+    "type": "project",
     "license": "GNU GPL V3",
-    "minimum-stability": "dev",
     "support": {
-        "source": "https://github.com/nhockizi/yii2-cms.git",
-        "issues": "https://github.com/nhockizi/yii2-cms/issues"
     },
-    "authors": [
-        {
-            "name": "Lâm Xuân Bảo",
-            "email": "nhockizi@gmail.com",
-            "country": "Viet Nam"
-        }
-    ],
+    "minimum-stability": "dev",
     "require": {
-        "php": ">=5.4.0",
-        "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*"
+        "php": ">=5.4.0"
     },
-    "autoload": {
-        "psr-4": {
-            "nhockizi\\cms\\": "/"
-        }
-    }, 
+    "require-dev": {
+        "nhockizi/yii2-cms": "dev-master",
+        "nhockizi/yii2-install": "dev-master",
+        "yiisoft/yii2-codeception": "*",
+        "yiisoft/yii2-debug": "*",
+        "yiisoft/yii2-gii": "*",
+        "yiisoft/yii2-faker": "*",
+        "creocoder/yii2-nested-sets": "0.9.*",
+        "bower-asset/fancybox": "*",
+        "bower-asset/jquery.switcher": "*",
+        "bower-asset/eonasdan-bootstrap-datetimepicker": "^4.7@dev",
+        "2amigos/yii2-selectize-widget": "~1.0"
+    },
+    "scripts": {
+        "post-create-project-cmd": [
+            "yii\\composer\\Installer::postCreateProject"
+        ]
+    },
     "extra": {
+        "yii\\composer\\Installer::postCreateProject": {
+            "setPermission": [
+                {
+                    "assets": "0777",
+                    "uploads": "0777",
+                    "app/config": "0777",
+                    "runtime": "0777",
+                    "runtime/logs": "0777"
+                }
+            ],
+            "generateCookieValidationKey": [
+                "app/config/web.php"
+            ]
+        },
+        "yii\\composer\\Installer::postUpdate": {
+            "setPermission": [
+                {
+                    "assets": "0777",
+                    "uploads": "0777",
+                    "app/config": "0777",
+                    "runtime": "0777",
+                    "runtime/logs": "0777"
+                }
+            ],
+            "generateCookieValidationKey": [
+                "app/config/web.php"
+            ]
+        },
         "asset-installer-paths": {
             "npm-asset-library": "vendor/npm",
             "bower-asset-library": "vendor/bower"
-        }
+        },
+        "writable": [
+            "runtime/logs"
+        ]
     }
 }
